--- a/public/rifopis/index.html
+++ b/public/rifopis/index.html
@@ -20,7 +20,7 @@
 
   <title>Rifopis</title>
   <meta name="description"
-    content="Realizamos sorteos con proposito" />
+    content="Plataforma de sorteos tokenizados que potencian la activación económica en diversas industrias y aceleran la adopción de los activos digitales como Bitcoin." />
   <meta name="keywords" content="Sorteos, Lotería, Juega, Gana, Rifa, Turismo, Criptos, Cryptos" />
   <meta name="author" content="Opis SpA" />
 </head>
