--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com"> 
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,500,700,900" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 
   <title>Shopis</title>
   <meta name="description"
